# vrchat_osc

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  WORKAROUNDS.md  build.rs
examples/: full.rs
mdns-sd/src/: service_daemon.rs
osc-query/: Cargo.toml
osc-query/src/: error.rs  lib.rs  models.rs  tests.rs
osc-query/src/models/: host_info.rs  node.rs  query.rs
src/: error.rs  fetch.rs  lib.rs  mdns.rs  oscquery.rs  tasks.rs
src/mdns/: if_monitor.rs  task.rs  utils.rs
src/oscquery/: models.rs
src/oscquery/models/: host_info.rs  node.rs  query.rs
