[package]
name = "vrchat_osc"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mdns-sd = { path = "mdns-sd" }
rosc = "~0.10"
oscquery = { path = "osc-query" }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
convert_case = "0.7"
