[package]
name = "vrchat_osc"
description = "vrchat_osc is a Rust crate designed to easily utilize VRChat's OSC (Open Sound Control) and OSCQuery protocols."
homepage = "https://github.com/minetake01/vrchat_osc"
readme = "README.md"
keywords = [
    "vrchat",
    "osc",
    "oscquery",
]
categories = [
    "asynchronous",
    "network-programming",
]
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
hickory-proto = { version = "0.25", features = ["mdns"] }
rosc = "~0.10"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
convert_case = "0.7"
wildmatch = "2.4.0"
socket2 = "0.5"
network-interface = "2.0.1"

[dev-dependencies]
env_logger = "0.11"