[package]
name = "oscquery"
version = "0.2.0"
edition = "2021"
description = "Implementation of OSCQuery Proposal"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
